[build-system]
build-backend = "setuptools.build_meta"

requires = [
    "setuptools",
    "wheel",

    # ---- NumPy pinning per Python version ----
    "numpy==2.3.2; python_version >= '3.14'",
    "numpy==2.1.3; python_version >= '3.13' and python_version < '3.14'",
    "numpy==2.0.0; python_version >= '3.10' and python_version < '3.13'",

    # ---- CMake (only where needed) ----
    "cmake==3.30.5",
]